--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+* {
+   box-sizing: border-box;
+}
+* {
+   padding: 0;
+   margin: 0;
+}
+a {
+   color: inherit;
+   text-decoration: none;
+}
+.app-img {
+   width: 70px;
+   height: 70px;
+   border-radius: 50%;
+}
+.app-wrapper {
+   max-width: 1300px;
+   margin: 0 auto;
+   padding: 0 20px;
+}
+.app-inner {
+   display: grid;
+   grid-template-areas:
+      "header header header"
+      "nav article article";
+   row-gap: 15px;
+   column-gap: 15px;
+}
+.app-header {
+   grid-area: header;
+   background-color: aqua;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-nav {
+   grid-area: nav;
+   background-color: brown;
+}
+.app-ul {
+   list-style: none;
+   padding: 20px;
+}
+.app-li {
+   padding-bottom: 10px;
+}
+.app-article {
+   grid-area: article;
+   background-color: blueviolet;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-article__img {
+   width: 100%;
+   height: 200px;
+   object-fit: cover;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app-article__content {
+   display: flex;
+   padding: 0 20px;
+}
+.app-article__ava {
+   width: 100px;
+   height: 100px;
+   border-radius: 50%;
+   object-fit: cover;
 }
 
-.App-link {
-  color: #61dafb;
+.app-article__info {
+   padding-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-article__info-name {
+   padding-bottom: 20px;
 }
